<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.slideshow.SlideshowFragment" >

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/distance"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/distanceTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distance1"
        android:inputType="number" />

    <EditText
        android:id="@+id/priceTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amenities"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/poolBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/cb1"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/spaBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/cb2"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/gymBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:clickable="true"
        android:text="@string/cb3"
        android:textSize="18sp" />

</LinearLayout>